# RISC-V-simulator

./: .gitignore  CMakeLists.txt  README.md  ans.data  check.py  extract.sh
src/: constant.h  cpu.cpp  cpu.h  cpu_control.cpp  decoding.cpp  decoding.h  main.cpp  memory.cpp  memory.h  predictor.h  typedef.h
